# 3DposeFrom2DImages

./: .gitignore  CMakeLists.txt  README.md  license.txt
apps/: CMakeLists.txt
apps/camera-projection/: camera-projection.cmake  main.cpp  point2d_skeleton_generated.h  rbdyn_helper.cpp  rbdyn_helper.cpp.OLD  rbdyn_helper.h
apps/create-projection/: create-projection.cmake  main.cpp  rbdyn_helper.cpp  rbdyn_helper.h
apps/hello/: hello-app.cmake  hello-main.cpp
include/hello/: hello.h
share/cmake/: pose-estimation_PID_Version.cmake
share/resources/app_config/: Kinect.yaml  camera-projection.yaml  camera-projection.yaml.OLD  vrep_scene.ttt
share/resources/pose_files/: .Pose11.yaml  .Pose12.yaml  .Pose13.yaml  .Pose15.yaml  Pose0.yaml  Pose1.yaml  Pose10.yaml  Pose16.yaml  Pose4.yaml  Pose5.yaml  Pose6.yaml  Pose7.yaml  Pose8.yaml  Pose9.yaml  PoseT.yaml  Pose_2.yaml  Pose_sequence.yaml
share/resources/urdf_models/: human.urdf  humanVREP.urdf  vrep_scene.ttt
src/: CMakeLists.txt
src/hello/: hello.cpp
